# gguf-humaneval-benchmark

./: .gitignore  CITATION.cff  README.md  pyproject.toml
eval_utils/: __init__.py  bench_config.json  code_bench.py
gguf_humaneval_benchmark/: benchmark.py  cli.py
